--- a/RPG.Presentation/RPG.Presentation.csproj
+++ b/RPG.Presentation/RPG.Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RPG.Application\RPG.Application.csproj" />
+    <ProjectReference Include="..\RPG.Domain\RPG.Domain.csproj" />
     <ProjectReference Include="..\RPG.Infrastructure\RPG.Infrastructure.csproj" />
   </ItemGroup>
 
