Dependency Injection added in Infrastructer Level

--- a/RPG.Application/RPG.Application.csproj
+++ b/RPG.Application/RPG.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\RPG.Domain\RPG.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
